# Fraunhofer_diffraction

./: CMakeLists.txt  README.md  diffractioncalculator.cpp  diffractioncalculator.h  mainwindow.cpp  mainwindow.h
